syntax="proto3";
import "google/protobuf/empty.proto";
package app.trian.model;

option java_multiple_files = true;

service RecipeInstructionService{

  rpc getListInstructionByRecipe(RecipeInstructionByRecipeRequest)returns(ListRecipeInstructionResponse){}

  rpc createInstruction(CreateRecipeInstructionRequest)returns(RecipeInstructionResponse){}

  rpc updateInstruction(UpdateRecipeInstructionRequest)returns(RecipeInstructionResponse){}

  rpc deleteInstruction(DeleteRecipeInstructionRequest)returns(RecipeInstructionResponse){}

}

message RecipeInstructionByRecipeRequest{
  int64 id=1;
}
message CreateRecipeInstructionRequest{
  int64 id_recipe=1;
  string description=2;
  string image=3;
}
message UpdateRecipeInstructionRequest{
  int64 id=1;
  string description=2;
  string image=3;
}
message DeleteRecipeInstructionRequest{
  int64 id=1;
}

//response
message RecipeInstructionResponse{
  int64 id=1;
  string description=2;
  string image=3;
  string createdAt=4;
  string updatedAt=5;
}

message ListRecipeInstructionResponse{
  repeated RecipeInstructionResponse instructions=1;
}